# NeoMate-Ai-Assistant

./: .gitignore  LICENSE.md  README.md  ROADMAP.md  environment.yml  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
config/: settings.yaml  task_profiles.yaml  user_preferences.yaml  wake_words.yaml
deployment/: Dockerfile  deploy.sh
docs/: architecture.md  contributing.md  project_vision.md  technical_specs.md
scripts/: build.py  health_check.py  install_dependencies.sh  update_models.py
src/: __init__.py  main.py
src/agents/: general_agent.py  real_time_agent.py  work_agent.py
src/core/: brain.py  context_manager.py  task_planner.py
src/input/: audio_analyzer.py  screen_capture.py  voice_input.py  wake_word_detector.py
src/learning/: auto_learner.py  research_agent.py
src/memory/: local_database.py  short_term_memory.py  user_preferences.py
src/models/local_llm/: model_loader.py  query_processor.py
src/models/nlp/: intent_classifier.py  language_translator.py  sentiment_analyzer.py
src/models/online_llm/: api_handler.py  fallback_manager.py
src/models/vision/: object_detection.py  text_recognition.py
src/neomate/: main.py
src/output/: automation_engine.py  ui_controller.py  voice_output.py
src/ui/: avatar_animations.py  main_window.py  status_indicator.py
src/utils/: config_loader.py  helpers.py  logger.py
tests/: test_coverage.py
