[tool.poetry]
name = "neomate-ai"
version = "0.1.0"
description = "A highly advanced, offline-first, open-source AI assistant."
license = "MIT"
readme = "README.md"
packages = [{include = "neomate_ai"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
isort = "^7.0.0"
ruff = "^0.14.2"
py-cpuinfo = "^9.0.0"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"]
